--- a/.github/workflows/backend-build.yaml
+++ b/.github/workflows/backend-build.yaml
@@ -16,6 +16,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Go
         uses: actions/setup-go@v5
+      - name: Install libtensorflow
+        run: |
+          FILENAME=libtensorflow-cpu-linux-x86_64-2.15.0.tar.gz
+          wget -q --no-check-certificate https://storage.googleapis.com/tensorflow/libtensorflow/${FILENAME}
+          sudo tar -C /usr/local -xzf ${FILENAME}
+          sudo ldconfig /usr/local/lib
       - name: Build
         run: go build -v ./...
       - name: Test
