--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -4,4 +4,9 @@ services:
     environment:
       POSTGRES_PASSWORD: mysecretpassword
     ports:
-      - 5432:5432
+      - 127.0.0.1:5432:5432
+
+  valkey:
+    image: valkey/valkey:8.0.2-alpine
+    ports:
+      - 127.0.0.1:6379:6379
