--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,6 @@ jobs:
           sudo tar -C /usr/local -xzf ${FILENAME}
           sudo ldconfig /usr/local/lib
       - name: Build
-        run: go build -v ./...
+        run: go build -v ./cmd/... ./internal/...
       - name: Test
-        run: go test ./...
+        run: go build -v ./cmd/... ./internal/...
