--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,12 +19,46 @@ jobs:
         run: |
           wget -q "$IMAGES_URL" -O images.zip
           unzip -q images.zip -d web/images/
-          wget -q "$MODELS_URL" -O models.zip
-          unzip -q models.zip -d ml/
         env:
           IMAGES_URL: ${{ secrets.IMAGES_URL }}
-          MODELS_URL: ${{ secrets.MODELS_URL }}
       - name: Build
         run: go build -v ./cmd/... ./internal/...
       - name: Test
         run: go build -v ./cmd/... ./internal/...
+      - name: Build binary
+        run: go build -o battler ./cmd/app
+      - name: Upload binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: battler
+          path: battler
+  
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Download binary
+        uses: actions/download-artifact@v4
+        with:
+          name: battler
+      - name: Download models
+        run: |
+          wget -q "$MODELS_URL" -O models.zip
+          unzip -q models.zip -d ml/
+        env:
+          MODELS_URL: ${{ secrets.MODELS_URL }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ghcr.io/ShmaykhelDuo/battler:${{ github.sha }}
+
