--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,11 +57,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Check dirs
-        run: ls -la
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: ghcr.io/shmaykhelduo/battler:${{ github.sha }}
 
