--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
     build: .
     environment:
       DB_CONN: postgres://postgres:mysecretpassword@postgres:5432/postgres?sslmode=disable
-      CACHE_URL: redis://localhost:6379/0
+      CACHE_URL: redis://valkey:6379/0
     ports:
       - 8080:8080
     depends_on:
